fix some spacing issues

--- a/src/app/atoms/button/Button.scss
+++ b/src/app/atoms/button/Button.scss
@@ -18,6 +18,10 @@
   cursor: pointer;
   @include state.disabled;
 
+  &:not(.btn-left-aligned) {
+    justify-content: center;
+  }
+
   & .text {
     @extend .cp-txt__ellipsis;
   }
